# ComfyUI-BawkNodes

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish-comfyui-registry.yml
modules/: __init__.py  cache_manager.py  model_utils.py  validation.py
nodes/: __init__.py  bawk_batch_processor.py  bawk_controlnet.py  bawk_image_loader.py  bawk_sampler.py  diffusion_model_loader.py  flux_image_saver.py  flux_prompt_saver.py  flux_wildcard_encode.py
utils/: flexible_inputs.py
web/extensions/: flux_wildcard_encoder.js
workflows/: example_bawknodes_workflow.json  example_flux_workflow.json.json
